--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "chai-as-promised": "^7.1.1",
     "chai-bn": "^0.3.1",
     "dotenv": "^16.0.0"
+  },
+  "devDependencies": {
+    "truffle-plugin-verify": "^0.5.25"
   }
 }
